<resources>
    <string name="app_name">Faco Saller App</string>
    <string name="welcome_to_faco">Welcome to Faco</string>
    <string name="what_s_your_number">What\'s Your Number?</string>
    <string name="we_will_text_you_a_code_to_verify_your_phone">We will text you a code to verify your \n Phone</string>
    <string name="_10_digit_mobile_number">10 digit mobile number</string>
    <string name="next">Next</string>
    <string name="update_medicines">UPDATE MEDICINES</string>
    <string name="please_enter_the_otp">Please Enter the OTP</string>
    <string name="we_have_text_you_a_code_to_verify_your_phone">We have text you a code to verify your \n Phone</string>
    <string name="resend">Resend OTP</string>
    <string name="i_want_to_register_as_a">I want to register as a :</string>
    <string name="medical_shop">Medical Shop</string>
    <string name="register_as_a_medical_shop_owner">Register as a Medical Shop Owner</string>
    <string name="test_lab">Test Lab</string>
    <string name="register_as_a_test_lab">Register as a Test Lab</string>
    <string name="contactless_digital_healthcare_solution">Contactless digital healthcare solution</string>
    <string name="your_housepital">Your HousePital</string>
    <string name="faco">Faco</string>
    <string name="enter_your_test_center_name">ENTER YOUR TEST CENTER NAME</string>
    <string name="tests_your_center_provides">TESTS YOUR CENTER PROVIDES</string>
    <string name="enter_your_address">ENTER YOUR ADDRESS</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="jaipur">Jaipur</string>
    <string name="rajasthan">Rajasthan</string>
    <string name="country">Country</string>
    <string name="india">India</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_availability">Set Availability</string>
    <string name="my_notification">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="patient_feedback">Patients Feedback</string>
    <string name="user_menu">Faco</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="emergency">EMERGENCY</string>
    <string name="sign_out">Sign Out</string>
    <string name="noting">Sad no result!</string>
    <string name="appointment_in_30_mins">Appointment in 30 Mins</string>
    <string name="with_dr_ammy">with Dr Ammy</string>
    <string name="search_by_lab_name_speciality">Search for Service, Products, Lab and more</string>
    <string name="home_appointment">Appointments</string>
    <string name="home_appointment_detail">All your Appointments</string>
    <string name="your_profile">Your Profile</string>
    <string name="view_edit_profile">View or Edit Your Profile</string>
    <string name="patient_details">All your patients details</string>
    <string name="patient_history">Patients History</string>
    <string name="patient_feedback_detail">All Feedback recieved by Patients</string>
    <string name="view_all_patients">View All Patients</string>
    <string name="upload_prescription"><u>Prescription</u></string>
    <string name="consulted_on_24th_august_2020">Consulted on 24th August 2020</string>
    <string name="_25_years">25 Years</string>
    <string name="arthurreese_gmail_com">Arthurreese@gmail.com</string>
    <string name="_0_reviews">(0 Reviews)</string>
    <string name="edit_now">Edit Now</string>
    <string name="drug_license">Drug License</string>
    <string name="sellers_address">Sellers Address</string>
    <string name="policies_securities"><![CDATA[Policies & Securities]]></string>
    <string name="test_name">TEST NAME</string>
    <string name="mrp">MRP</string>
    <string name="test_name_1">Test Name</string>
    <string name="_120">₹120</string>
    <string name="about_the_test">ABOUT THE TEST</string>
    <string name="about_the_test_1">About The Test...</string>
    <string name="tests_included">TESTS INCLUDED</string>
    <string name="tests_prepration">TESTS PREPRATION</string>
    <string name="create_new_test">Create New Test</string>
    <string name="things_to_keep_in_mind_before_test">THINGS TO KEEP IN MIND BEFORE TEST</string>
    <string name="this_is_a_test_prepration">This is a test prepration</string>
    <string name="glycosylated_hamoglobin_glucose_fasting_blood">Glycosylated Hamoglobin Glucose - Fasting blood</string>
    <string name="select_time_slot_for_video_consultation">Set Your Availability Time Slots</string>
    <string name="jan_2020">Oct 2020</string>
    <string name="will_you_be_available_at_this_day">Will you be available at this day ?</string>
    <string name="online_consultation">Set the time you will be available for Online Consultation</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="_8_00_am">09:00 AM</string>
    <string name="_8_00_pm">05:00 PM</string>
    <string name="continu">Continue</string>
    <string name="error_toast">Error Toast</string>
</resources>