<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_set_avaliability"
            android:icon="@drawable/nav_health_feed"
            android:title="@string/set_availability" />
        <item
            android:id="@+id/menu_Notif"
            android:icon="@drawable/nav_notification"
            android:title="@string/my_notification" />
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/nav_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/menu_feedback"
            android:icon="@drawable/patient_feedback"
            android:title="@string/patient_feedback" />
        <item
            android:id="@+id/menu_signOut"
            android:icon="@drawable/nav_signout"
            android:title="@string/sign_out" />
    </group>
</menu>