<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SplashActivity"
    android:background="@color/purple_500"
    >
  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_ellipse"
      android:layout_alignParentRight="true"
      />

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      >
  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_faco_icon"
      android:elevation="50dp"
      android:background="@drawable/background_20dp"
      android:padding="20dp"
      android:layout_centerHorizontal="true"
      />
  <LinearLayout
      android:id="@+id/liner_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@drawable/splash_background"
      android:gravity="center"
      android:layout_marginTop="40dp"
      android:paddingBottom="50dp"
      android:paddingTop="20dp"
      android:layout_marginBottom="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/faco"
        android:textColor="@color/purple_500"
        android:textSize="45dp"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/your_housepital"
        android:textColor="@color/purple_500"
        android:letterSpacing="0.01"
        android:textSize="16dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:letterSpacing="0.01"
        android:text="@string/contactless_digital_healthcare_solution"
        android:textColor="@color/purple_500"
        android:textSize="12dp" />
  </LinearLayout>
  </RelativeLayout>
  </RelativeLayout>