<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddLabInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <include layout="@layout/custom_toolbar_layout" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txt_patient_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/txt_age"
                        android:fontFamily="@font/gilroy_extra_bold"
                        android:text="@string/test_name"
                        android:textColor="@color/purple_500"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:letterSpacing="0.025"
                        />

                    <TextView
                        android:id="@+id/txt_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/gilroy_extra_bold"
                        android:text="@string/mrp"
                        android:textColor="@color/purple_500"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:letterSpacing="0.025"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_ed_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/details"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_txt_patient_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/ed_txt_age"
                        android:fontFamily="@font/gilroy_light"
                        android:hint="@string/test_name_1"
                        android:inputType="textPersonName"
                        android:letterSpacing="0.02"
                        android:paddingBottom="15dp"
                        android:singleLine="true"
                        android:textColor="#575757"
                        android:textColorHint="#575757" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_txt_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/gilroy_light"
                        android:hint="@string/_120"
                        android:inputType="number"
                        android:letterSpacing="0.02"
                        android:maxLength="4"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="15dp"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        android:textColor="#575757"
                        android:textColorHint="#575757" />

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_ed_txt"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_extra_bold"
                        android:padding="10dp"
                        android:text="@string/about_the_test"
                        android:textColor="@color/purple_500"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:letterSpacing="0.025"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_txt_phn_number"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_marginLeft="15dp"
                        android:ems="10"
                        android:fontFamily="@font/gilroy_light"
                        android:gravity="start"
                        android:hint="@string/about_the_test_1"
                        android:textColor="#575757"
                        android:textColorHint="#575757"
                        android:textStyle="bold"
                        android:textSize="14dp"
                        android:paddingBottom="20dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/gilroy_extra_bold"
                        android:padding="10dp"
                        android:text="@string/tests_included"
                        android:textColor="@color/purple_500"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:letterSpacing="0.025"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_txt_test_include"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_email_id"
                        android:layout_marginLeft="15dp"
                        android:ems="10"
                        android:fontFamily="@font/gilroy_light"
                        android:gravity="start"
                        android:hint="@string/glycosylated_hamoglobin_glucose_fasting_blood"
                        android:textColor="#878787"
                        android:textColorHint="#878787"
                        android:textStyle="bold"
                        android:textSize="14dp"
                        android:paddingBottom="20dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/gilroy_extra_bold"
                        android:padding="10dp"
                        android:text="@string/tests_prepration"
                        android:textColor="@color/purple_500"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:letterSpacing="0.025"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_txt_test_prepration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_select_type"
                        android:layout_marginLeft="15dp"
                        android:ems="10"
                        android:fontFamily="@font/gilroy_light"
                        android:gravity="start"
                        android:hint="@string/this_is_a_test_prepration"
                        android:textColor="#878787"
                        android:textColorHint="#878787"
                        android:textStyle="bold"
                        android:textSize="14dp"
                        android:paddingBottom="20dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/gilroy_extra_bold"
                        android:padding="10dp"
                        android:text="@string/things_to_keep_in_mind_before_test"
                        android:textColor="@color/purple_500"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:letterSpacing="0.025"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_txt_test_before_prepration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_select_type"
                        android:layout_marginLeft="15dp"
                        android:ems="10"
                        android:fontFamily="@font/gilroy_light"
                        android:gravity="start"
                        android:hint="@string/this_is_a_test_prepration"
                        android:textColor="#878787"
                        android:textColorHint="#878787"
                        android:textStyle="bold"
                        android:textSize="14dp"
                        android:paddingBottom="20dp"
                        />
                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp">


            <Button
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/background_10dp"
                android:drawableEnd="@drawable/ic_right_back"
                android:drawableTint="@color/white"
                android:drawablePadding="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/create_new_test"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>